🐛 Fix: 배포 및 실행 스크립트

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -36,4 +36,4 @@ jobs:
             git pull upstream dev
             npm install -f
             npm run build
-            pm2 reload dist/main.js --name "calog.server"
+            pm2 reload "calog.server" --update-env
